# optcgtools

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml
.claude/: settings.json
.claude/agents/: adversarial-critic.md  (+8 more)
.codex/: config.toml
docs/: engineering-notes.md  optcg-material-model.md  publishing.md  upstream-audit.md
examples/: capture-session.example.json  fit-sequence.example.json  optimize-profile.example.json  render-sequence.example.json  research-profile.example.json  segmentation-request.example.json
references/: README.md
schemas/: capture-session.schema.json  card-material-profile.schema.json
scripts/: check-source-pin.mjs  compile-card-profile.mjs  fetch-upstream.sh  install-sam2.sh  optimize-profile.mjs  publish-new-repo.sh  render-sequence.mjs  warp-candidate.py
src/: App.svelte  main.js  research.css  site.css
tests/: test_agent_gates.py  test_appearance_envelope.py  test_candidate.py  test_fitting.py  test_geometry.py  test_material_maps.py  test_models.py  test_promotion.py  test_promotion_cli.py  test_provenance.py  test_quality.py  test_reference_bundle.py  test_reference_fitting.py  test_reference_normalize.py  test_review.py  test_segmentation_backends.py  test_semantic.py
tests-node/: profile-compiler.test.mjs  profile-optimizer.test.mjs
tests-web/: profile-compiler-visual.spec.js  profile-compiler.spec.js  profile-optimizer.spec.js  research-renderer.spec.js  script-syntax.spec.js
upstream/: PINNED_SOURCE.md
(+143 files in other folders)
