[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "optcg-material-pipeline"
version = "0.1.0"
description = "Authenticated OPTCG physical-card capture ingestion, registration, and material-map tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "GenkiStuff" }]
dependencies = [
  "blake3>=1.0.4,<2",
  "numpy>=2.2,<3",
  "opencv-python-headless>=4.11,<5",
  "pillow>=11.2,<12",
  "pydantic>=2.11,<3",
  "rich>=14,<15",
  "typer>=0.16,<1",
]

[project.scripts]
optcg-material = "optcg_material.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.1,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optcg_material"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["optcg_material"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["optcg_material"]
branch = true
